@@ -1,4 +1,7 @@
 2008-09-04  Basile Starynkevitch  <basile@starynkevitch.net>
+	MELT branch merged with trunk r139990
+
+2008-09-04  Basile Starynkevitch  <basile@starynkevitch.net>
 	MELT branch merged with trunk r139983
 
 2008-09-03  Basile Starynkevitch  <basile@starynkevitch.net>
